# mana-script

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  test.ms
doc/: design.md
examples/: hello.mana
include/: error.hpp  jit.hpp  parser.hpp
mana-script/: CMakeLists.txt  build.ps1
mana-script/examples/: test.mana
mana-script/include/: ast.hpp  codegen.hpp  symbol_table.hpp  token.hpp  transpiler.hpp
mana-script/scripts/: build.bat
mana-script/src/: ast.cpp  codegen.cpp  lexer.cpp  lexer.hpp  symbol_table.cpp  token.cpp  transpiler.cpp
mana-script/src/context/: AudioContext.tsx
mana-script/tests/: CMakeLists.txt  test_lexer.cpp
src/: error.cpp  jit.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp
tests/: CMakeLists.txt  test_lexer.cpp
